Adds address to editor lines

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFilesViewer.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFilesViewer.axaml
@@ -35,7 +35,7 @@
     <TabControl.ContentTemplate>
       <DataTemplate DataType="vm:SourceFileViewModel">
         <!--<v:SourceFileViewer CursorRow="{Binding CursorRow}" />-->
-        <v:SourceFileViewer />
+        <v:SourceFileViewer FontFamily="{StaticResource CodeFont}" />
       </DataTemplate>
     </TabControl.ContentTemplate>
   </TabControl>
