Adds ACME syntax coloring

--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/SourceFileViewer.axaml
@@ -12,6 +12,7 @@
         FontFamily="{StaticResource CodeFont}"
         Background="Transparent"
         ShowLineNumbers="True"
+        IsReadOnly="True"
         Margin="12,4,4,4"
         Foreground="Black"
         HorizontalScrollBarVisibility="Auto"
