--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
@@ -10,6 +10,11 @@
              mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="120"
              x:Class="Modern.Vice.PdbMonitor.Views.Variables">
   <DataGrid Name="Grid" Items="{Binding Items}" FontFamily="{StaticResource CodeFont}">
+    <DataGrid.Styles>
+      <Style Selector="TextBlock">
+        <Setter Property="FontSize" Value="12" />
+      </Style>
+    </DataGrid.Styles>
     <DataGrid.Resources>
       <c:HexAddressConverter x:Key="HexAddressConverter" />
       <c:HexAddressConverter x:Key="HexAddressConverterWithTrim" TrimToByte="True" />
