--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Variables.axaml
@@ -32,7 +32,7 @@
               <Button Margin="2, 0" IsVisible="{Binding IsExpandable}" FontSize="10"
                 Command="{Binding #Grid.DataContext.ToggleVariableExpansionCommand}" CommandParameter="{Binding}"
                 Content="{Binding IsExpanded, Converter={StaticResource ExpandedToStringConverter}}" />
-              <TextBlock Text="{Binding Name, Mode=OneTime}" VerticalAlignment="Center" />
+              <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
             </StackPanel>
           </DataTemplate>
         </DataGridTemplateColumn.CellTemplate>
