--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Project.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/Project.axaml
@@ -23,6 +23,7 @@
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
         <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
       </Grid.RowDefinitions>
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="Auto" />
@@ -55,6 +56,9 @@
 
       <TextBlock Grid.Row="5" Classes="label">Stop at label</TextBlock>
       <ComboBox Grid.Row="5" Grid.Column="2" Margin="0,4,0,0" MinWidth="350" SelectedItem="{Binding StopAtLabel}" Items="{Binding AllLabels}"/>
+
+      <TextBlock Grid.Row="6" Classes="label">Output address</TextBlock>
+      <TextBox Grid.Row="6" Grid.Column="2" Text="{Binding DebugOutputAddress}" Width="100" HorizontalAlignment="Left" />
     </Grid>
   </DockPanel>
 </UserControl>
