--- a/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/TraceOutput.axaml
+++ b/source/Modern.Vice.PdbMonitor/Modern.Vice.PdbMonitor/Views/TraceOutput.axaml
@@ -3,26 +3,48 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:svg="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
-            xmlns:vm="clr-namespace:Modern.Vice.PdbMonitor.Engine.ViewModels;assembly=Modern.Vice.PdbMonitor.Engine"
-            xmlns:v="clr-namespace:Modern.Vice.PdbMonitor.Views"
-            xmlns:c="clr-namespace:Modern.Vice.PdbMonitor.Converters"
-            xmlns:ctl="clr-namespace:Modern.Vice.PdbMonitor.Controls"
-            xmlns:cmn="clr-namespace:Modern.Vice.PdbMonitor.Engine.Common;assembly=Modern.Vice.PdbMonitor.Engine"
-            x:DataType="vm:TraceOutputViewModel"
+             xmlns:vm="clr-namespace:Modern.Vice.PdbMonitor.Engine.ViewModels;assembly=Modern.Vice.PdbMonitor.Engine"
+             xmlns:v="clr-namespace:Modern.Vice.PdbMonitor.Views"
+             xmlns:c="clr-namespace:Modern.Vice.PdbMonitor.Converters"
+             xmlns:ctl="clr-namespace:Modern.Vice.PdbMonitor.Controls"
+             xmlns:cmn="clr-namespace:Modern.Vice.PdbMonitor.Engine.Common;assembly=Modern.Vice.PdbMonitor.Engine"
+             x:DataType="vm:TraceOutputViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             x:Name="Root"
              x:Class="Modern.Vice.PdbMonitor.Views.TraceOutput">
   <DockPanel>
     <StackPanel Orientation="Vertical" DockPanel.Dock="Right" Margin="2">
-      <Button Command="{Binding ClearCommand}" Width="16" Height="16" Padding="0">
+      <Button Command="{Binding ClearCommand}" Width="16" Height="16" Padding="0" 
+      Margin="0,4" ToolTip.Tip="Clear text"
+      Background="Transparent">
         <Image>
           <Image.Source>
             <svg:SvgImage Source="/Assets/Icons/trash.svg" />
           </Image.Source>
         </Image>
       </Button>
+      <Button x:Name="Follow" Width="16" Height="16" Padding="0" Margin="0,4"
+        Background="Transparent" ToolTip.Tip="Automatically scroll">
+        <Image>
+          <Image.Source>
+            <svg:SvgImage Source="/Assets/Icons/follow.svg" />
+          </Image.Source>
+        </Image>
+      </Button>
     </StackPanel>
-    <TextBox BorderThickness="0"
-    FontFamily="{StaticResource C64Mono}" FontSize="10"
-    IsReadOnly="True" Text="{Binding Text}" TextWrapping="Wrap" />
+    <TextBox x:Name="Output" BorderThickness="0"
+      FontFamily="{StaticResource C64Mono}" FontSize="10"
+      IsReadOnly="True" Text="{Binding Text}" TextWrapping="Wrap">
+      <!-- disable borders -->
+      <TextBox.Styles>
+        <Style Selector="TextBox:focus /template/ Border#PART_BorderElement">
+          <Setter Property="BorderBrush" Value="Transparent" />
+        </Style>
+        <Style Selector="TextBox:pointerover /template/ Border#PART_BorderElement">
+          <Setter Property="BorderBrush" Value="Transparent" />
+        </Style>
+      </TextBox.Styles>
+    </TextBox>
+
   </DockPanel>
 </UserControl>
